@@ -1,3 +1,10 @@
+Thu Oct 10 14:49:10 1996  Kevin Layer  <layer@freezer>
+
+	* fi-clman.el: use fi::library-directory
+	* fi-keys.el: put back newline hack for win95's command.com
+	* fi-site-init.el: load-file-name not available in all versions of
+	emacs
+
 Wed Oct  9 01:17:25 1996  Kevin Layer  <layer@freezer>
 
 	* Makefile: add `tiger'
